# SasModelsExplorer

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  requirements.txt  setup.py
ModelExplorer/: __init__.py  __main__.py  data_loading_panel.py  fitting_panel.py  modelbrowser.py  modelexplorer.py  parameter_panel.py  plotting.py  sasmodels_adapter.py  types.py  yaml_editor_widget.py
ModelExplorer/services/: __init__.py  data_loader.py  fitting_engine.py
ModelExplorer/utils/: configure_logging.py  list_to_columnar_string.py  units.py
scripts/: build_executable.ps1  build_executable.py
src/ModelExplorer/: modelexplorer.py
tests/: test_data_loader.py  test_fitting_engine.py  test_integration_pipeline.py  test_sasmodels_adapter.py  test_types.py  test_units.py
